--- a/manifest.json
+++ b/manifest.json
@@ -32,6 +32,7 @@
     "downloads",
     "notifications",
     "storage",
+    "unlimitedStorage",
     "identity",
     "https://docs.google.com/spreadsheets/"
   ],
